# nene

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements-cpu.txt  setenv.sh
app/: __init__.py  api_server.py  constants.py  server.py
app/components/: __init__.py  api.py  base.py  commons.py  component_llm.py  component_tts.py  utils.py  utils_model_load.py
app/components/embed/: __init__.py  common.py  component.py  embed_api.py  factory.py
app/components/ingestdb/: chroma_db.py  commons.py  faiss_db.py  ingets_api.py  pymilvus_db.py
app/components/llm/: __init__.py  component.py  factory.py  llm_api.py
app/components/rag/: __init__.py  component.py  impl.py  prompts.py  rag_api.py  service_embed.py  service_llm.py
app/core/: config.py  logger.py
app/notebookdoc/: doc_pieces.py
app/schemas/: protocol.py
app/zzdocs/: __init__.py  doc_pieces.py  parser.py
config/: config.py
grpc_server/: __init__.py  fastapi_app.py  grpc_server.py  tts.proto  tts_pb2.py  tts_pb2_grpc.py
scripts/: launch.py  llm_services.py  llm_sys.ipynb  llm_tts.py  llmacpp_scripts.py  textgen.py  textgen2tts.py  tts.py  tts_bench_cpu.py  tts_bench_cpuB.py  tts_bench_cpuC.py  tts_bench_cpuD.py  tts_bench_gpu.py  tts_bench_gpuC.py  x.py
scripts/llm_tts/: index.html  scripts.py
scripts/llm_tts_grpc/: gen_proto.sh  index.html  llm_tts.py  test_edge.py  tts.proto  tts_srv.py
web/AgentStudio/: index.html  package-lock.json  package.json
web/zzJS/: package-lock.json  package.json  server.js
web/zzJS/src/: app.js  (+4 more)
zzproxys/: myproxy.bash  myproxy4.bash
(+30 files in other folders)
